[package]
name = "rust-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
# Provides the #[entry] macro, which tells Rust where our main func is.
cortex-m-rt = "0.7"
# Provides access to pico hardware
rp-pico = "0.6"
# Simplifies/makes generic access to hardware
embedded-hal ="0.2"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
rp2040-hal = "0.7.0"
fugit = "0.3.6"
embedded-time = "0.12"

embedded-graphics = "0.7.1"
tinybmp = "0.4.0"
embedded-graphics-core = "0.3.3"
st7789 = "0.7.0"
